test(order-service): deliveryDate 미지정 시 배송일 기본값(today) 설정 테스트 추가
Refs feature/#3-schedule-delivery-date